# Seznam_Webscraper

./: README.md  main.py  pyproject.toml  test.py
