[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["TrueTryggvi <m.v.vyzhlakov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
beautifulsoup4 = "^4.11.2"
pyshorteners = "^1.0.1"
pytest = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
